[Icons] Hack to fix blury icons in workbench.xmi
https://github.com/mytourbook/mytourbook/issues/1514